fixed: 更正首页公告列表，日期列过长导致换行问题

--- a/app/views/irm/bulletins/_bulletin_portlet.html.erb
+++ b/app/views/irm/bulletins/_bulletin_portlet.html.erb
@@ -21,9 +21,9 @@
   </div>
   <%= datatable("bulletins_list",{:controller => "irm/bulletins", :action=>"get_data",:format=>"json"},
                 [{:key=>"id",:label=>"", :hidden => true},
-                 {:key=>"bulletin_title",:label=>t(:label_irm_bulletin_title), :formatter=>"Y.irm.template", :sortable=>true},
+                 {:key=>"bulletin_title",:label=>t(:label_irm_bulletin_title), :formatter=>"Y.irm.template"},
                  {:key=>"page_views",:label=>t(:label_irm_bulletin_page_views), :width => "70"},
-                 {:key=>"published_date",:label=>t(:label_irm_bulletin_published_date), :width => "120"}],
+                 {:key=>"published_date",:label=>t(:label_irm_bulletin_published_date), :width => "150"}],
                 {:force_html=>true}
       )%>
 </div>
