添加知识库报表

--- a/app/views/icm/incident_requests/_new_form.html.erb
+++ b/app/views/icm/incident_requests/_new_form.html.erb
@@ -70,8 +70,7 @@
               <td class="data2Col"><%=f.select :incident_category_id,
                                             nullable_options_for_select([],@incident_request.incident_category_id),
                                             {},
-                                            {:required=>true,
-                                             :id=>"incident_category_id",
+                                            {:id=>"incident_category_id",
                                              :origin_value=>@incident_request.incident_category_id,
                                              :depend=>"ass_external_system",
                                              :blank=> "--- #{t(:actionview_instancetag_blank_option)} ---",
@@ -84,8 +83,7 @@
               <td class="data2Col"><%=f.select :incident_sub_category_id,
                                             nullable_options_for_select([],@incident_request.incident_sub_category_id),
                                             {},
-                                            {:required=>true,
-                                             :id=>"incident_sub_category_id",
+                                            {:id=>"incident_sub_category_id",
                                              :origin_value=>@incident_request.incident_sub_category_id,
                                              :depend=>"incident_category_id",
                                              :blank=> "--- #{t(:actionview_instancetag_blank_option)} ---",
