--- a/app/views/icm/incident_journals/edit_close.html.erb
+++ b/app/views/icm/incident_journals/edit_close.html.erb
@@ -95,8 +95,7 @@
               <td><%=f.select :incident_category_id,
                                             nullable_options_for_select([],@incident_request.incident_category_id),
                                             {},
-                                            {:required=>true,
-                                             :id=>"incident_category_id",
+                                            {:id=>"incident_category_id",
                                              :origin_value=>@incident_request.incident_category_id,
                                              :depend=>"ass_external_system",
                                              :blank=> "--- #{t(:actionview_instancetag_blank_option)} ---",
@@ -107,8 +106,7 @@
               <td><%=f.select :incident_sub_category_id,
                                             nullable_options_for_select([],@incident_request.incident_sub_category_id),
                                             {},
-                                            {:required=>true,
-                                             :id=>"incident_sub_category_id",
+                                            {:id=>"incident_sub_category_id",
                                              :origin_value=>@incident_request.incident_sub_category_id,
                                              :depend=>"incident_category_id",
                                              :blank=> "--- #{t(:actionview_instancetag_blank_option)} ---",
