--- a/public/themes/default/stylesheets/table.css
+++ b/public/themes/default/stylesheets/table.css
@@ -73,6 +73,36 @@ td { background-color:transparent;} /* none */
     +background-color: #fff;
 }
 
+.irm-table-tbar-small-icon-btn {
+    background-color: transparent;
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    border-left-style-ltr-source: physical;
+    border-left-style-rtl-source: physical;
+    border-left-style-value: solid;
+    border-left-width-ltr-source: physical;
+    border-left-width-rtl-source: physical;
+    border-left-width-value: 1px;
+    border-right-style-ltr-source: physical;
+    border-right-style-rtl-source: physical;
+    border-right-style-value: solid;
+    border-right-width-ltr-source: physical;
+    border-right-width-rtl-source: physical;
+    border-right-width-value: 1px;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+    border-top-style: solid;
+    border-top-width: 1px;
+    padding-bottom: 2px;
+    padding-left: 2px;
+    padding-right: 2px;
+    padding-top: 2px;
+
+    border-color: transparent;
+}
+
 .irm-paginator-box {
     font-size: 11px;
     padding: 2px 0 2px 2px;
@@ -97,23 +127,88 @@ td { background-color:transparent;} /* none */
     margin-top: 5px;
 }
 
-.irm-paginator-box .record-label { position:absolute; right: 20px; margin-top: 5px;}
+.irm-paginator-box .record-label { float:right; margin-right: 5px;}
 .irm-btn-icon {
 
 }
+.irm-paginator-box{margin-top: 3px;}
+.irm-paginator-box input{
+    border: solid 1px #b5b8c8;
+}
 
-
-.next-button {
+.irm-paginator-box .next-button {
     background-image: url("../images/page-next.gif") !important;
-    position: absolute;
+    /*position: absolute;*/
+}
+.irm-paginator-box .next-button.disabled {
+    background-image: url("../images/page-next-disabled.gif") !important;
+    /*position: absolute;*/
 }
 
-.refresh-button {
+.irm-paginator-box .refresh-button {
     background-image: url("../images/refresh.gif") !important;
-    position: absolute;
-    margin-left: 25px;
+    /*position: relative;*/
 }
 
-.pre-button {
+.irm-paginator-box .pre-button {
     background-image: url("../images/page-prev.gif") !important;
+}
+.irm-paginator-box .pre-button.disabled {
+    background-image: url("../images/page-prev-disabled.gif") !important;
+}
+.irm-toolbar .irm-toolbar-separator-horizontal {
+    border-left-color-value: #98C8FF;
+    border-left-style-value: solid;
+    border-left-width-value: 1px;
+    border-right-color-value: white;
+    border-right-style-value: solid;
+    border-right-width-value: 1px;
+    height: 14px;
+    margin-bottom: 0;
+    margin-left: 2px;
+    margin-right: 3px;
+    margin-top: 0;
+    width: 0;
+}
+
+.irm-toolbar .irm-toolbar-separator {
+    cursor: default;
+    display: block;
+    font-size: 1px;
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
+
+.irm-paginator-box .page {
+    float:left;
+    margin-right: 5px;
+}
+
+.irm-btn-icon.irm-table-button {
+    cursor: pointer;
+    background-repeat: no-repeat;
+    display: inline-block;
+    vertical-align: middle;
+    white-space: nowrap;
+    float:left;
+    margin-top: 1px;
+    margin-right: 5px;
+}
+
+.irm-table-button.disabled {
+    cursor: auto;
+}
+
+.irm-table-button:hover {
+    background-color: #DBEEFF;
+    background-image: -moz-linear-gradient(center top, #DBEEFF, #D0E7FF 48%, #BBD2F0 52%, #BED6F5);
+    border-style: solid;
+    border-color: #81A4D0;
+}
+
+.irm-table-button.disabled:hover {
+    background-color: transparent;
+    background-image: none;
+    border-style: solid;
+    border-color: transparent;
 }
