--- a/app/views/irm/kanbans/index.html.erb
+++ b/app/views/irm/kanbans/index.html.erb
@@ -26,9 +26,9 @@
         <%= datatable("kanban_list",{:action=>"get_data"},
                   [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"80px"},
                    {:key=>"name",:label=>t(:name),:width=>"150px"},
-                   {:key=>"description",:label=>t(:description),:width=>"250px"},
-                   {:key=>"refresh_interval",:label=>t(:label_irm_kanban_refresh_interval),:width=>"40px"},
-                   {:key=>"limit",:label=>t(:label_irm_lane_limit),:width=>"40px"},
+                   {:key=>"description",:label=>t(:description)},
+                   {:key=>"refresh_interval",:label=>t(:label_irm_kanban_refresh_interval),:width=>"80px"},
+                   {:key=>"limit",:label=>t(:label_irm_lane_limit),:width=>"80px"},
                    {:key=>"status_meaning",:label=>t(:active),:width=>"40px"}])%>
       </div>
     </div>
