--- a/public/themes/default/stylesheets/form.css
+++ b/public/themes/default/stylesheets/form.css
@@ -120,5 +120,16 @@ form .pbBottomButtons > table {border-top:1px solid #FFFFFF;padding:0 !important
 td.filterOperationValue{
     white-space:nowrap;
 }
-/*******************END f;ilter************************************/
+/*******************END filter************************************/
 
+/*******************BEGIN upload-file************************************/
+table.upload-file tr.file-item,tr.file-buttons td{
+    padding-left:5px;
+    white-space:nowrap;
+    vertical-align: middle;
+}
+table.upload-file tr.file-item td.file-desc-label{
+    text-align:right;
+    padding-left:10px;
+}
+/*******************END upload-file************************************/
