--- a/public/themes/default/stylesheets/form.ie6.css
+++ b/public/themes/default/stylesheets/form.ie6.css
@@ -127,3 +127,14 @@ td.filterOperationValue{
     white-space:nowrap;
 }
 /*******************END f;ilter************************************/
+/*******************BEGIN upload-file************************************/
+table.upload-file tr.file-item,tr.file-buttons td{
+    padding-left:5px;
+    white-space:nowrap;
+    vertical-align: middle;
+}
+table.upload-file tr.file-item td.file-desc-label{
+    text-align:right;
+    padding-left:10px;
+}
+/*******************END upload-file************************************/
