--- a/app/views/skm/entry_headers/new_from_icm_request.html.erb
+++ b/app/views/skm/entry_headers/new_from_icm_request.html.erb
@@ -2,7 +2,6 @@
 <% require_javascript(:extjs) %>
 <% require_css(:extjs) %>
 <%= form_for(@entry_header,:url=>{:action=>"create_from_icm_request"},:builder => LabellingFormBuilder, :html => {:name => "edit_form", :id => "edit_form",:multipart => true}) do |f| %>
-<%= f.hidden_field :column_ids %>
 <%= f.hidden_field :source_type %>
 <%= f.hidden_field :source_id %>
 <%= f.hidden_field :entry_template_id %>
@@ -48,13 +47,18 @@
                           <td class="labelCol"><label><%=(t :label_skm_entry_header_doc_number)%></label></td>
                           <td class="data2Col"><%= @entry_header.doc_number%></td>
                         </tr>
+
                         <tr>
                           <td class="labelCol"><label><%=(t :label_skm_entry_header_title)%></label></td>
-                          <td class="data2Col"><%=f.text_field :entry_title, :required=>true%></td>
+                          <td class="data2Col"><%= f.text_field :entry_title, :size => 80, :required => true%></td>
                         </tr>
                         <tr>
                           <td class="labelCol"><label><%=(t :label_skm_entry_header_keyword_tags)%></label></td>
-                          <td class="data2Col"><%=f.text_field :keyword_tags%></td>
+                          <td class="data2Col"><%= f.text_field :keyword_tags, :size => 80%></td>
+                        </tr>
+                        <tr>
+                          <td class="labelCol"><label><%=(t :label_skm_channel)%></label></td>
+                          <td class="data2Col"><%= f.lov_field :channel_id, Skm::Channel, {:required => true}%></td>
                         </tr>
                     </tbody>
                   </table>
@@ -175,47 +179,6 @@
 </div>
 
 <% end %>
-
-<script>
-Ext.onReady(function() {
-    var treeNode = Ext.getDom("tree-div");
-
-    Ext.define('ColumnField', {
-        extend: 'Ext.data.Model',
-        fields: [
-            {name: 'id',type: 'string'},
-            {name: 'text',type: 'string'},
-            {name: 'sc_id',type: 'string'},
-            {name: 'column_name',type: 'string'},
-            {name: 'column_description',type: 'string'},
-            {name: 'sc_code',type: 'string'}
-        ]
-    });
-    var store = Ext.create('Ext.data.TreeStore', {
-        model: "ColumnField",
-        proxy: {type: 'ajax',url:  treeNode.getAttribute("href") + "?with_check=<%= @entry_header.column_ids%>"}
-    });
-
-    var tree = Ext.create('Ext.tree.Panel', {
-        store: store,
-        rootVisible: false,
-        useArrows: true,
-        renderTo: 'tree-div',
-        width: 200,
-        height: 80,
-        listeners:{
-            'itemclick':function(view, record, item, index, e){
-                var column_ids = [];
-                Ext.Array.each(tree.getChecked(), function(rec){
-                    column_ids.push(rec.get('id'));
-                });
-                Ext.getDom("skm_entry_header_column_ids").setAttribute("value", column_ids);
-            }
-        }
-    });
-
-});
-</script>
 
 <script type="text/javascript">
   function delete_subject(tar){
