添加变更单,新建,编辑页面

--- a/app/views/chm/change_impacts/new.html.erb
+++ b/app/views/chm/change_impacts/new.html.erb
@@ -1,2 +1,6 @@
-<%= common_title %>
-<%= render 'new_form'%>
+<%= page("newImpact") do |p| %>
+    <%= p.page_header %>
+    <%= p.page_body do %>
+         <%= render 'new_form'%>
+    <% end %>
+<% end %>
