--- a/app/views/chm/change_requests/edit.html.erb
+++ b/app/views/chm/change_requests/edit.html.erb
@@ -1,6 +1,6 @@
-<%= page("newStatus") do |p| %>
+<%= page("editRequest") do |p| %>
     <%= p.page_header %>
     <%= p.page_body do %>
-         <%= render 'new_form'%>
+         <%= render 'edit_form'%>
     <% end %>
 <% end %>
