--- a/app/views/chm/change_requests/new.html.erb
+++ b/app/views/chm/change_requests/new.html.erb
@@ -1,4 +1,4 @@
-<%= page("newStatus") do |p| %>
+<%= page("newRequest") do |p| %>
     <%= p.page_header %>
     <%= p.page_body do %>
          <%= render 'new_form'%>
