--- a/app/views/chm/change_statuses/edit.html.erb
+++ b/app/views/chm/change_statuses/edit.html.erb
@@ -1,2 +1,6 @@
-<%= common_title %>
-<%= render 'edit_form'%>
+<%= page("editStatus") do |p| %>
+    <%= p.page_header %>
+    <%= p.page_body do %>
+         <%= render 'edit_form'%>
+    <% end %>
+<% end %>
