--- a/app/views/chm/change_statuses/_edit_form.html.erb
+++ b/app/views/chm/change_statuses/_edit_form.html.erb
@@ -1,50 +1,61 @@
 <%= form_for(@change_status,:url=>{:action=>"update"},:builder => LabellingFormBuilder) do |f| %>
-    <%= page_block do %>
-        <%= page_block_header(t(:label_chm_change_status_edit)) do %>
+    <%= page_block("editPriority") do |pb|%>
+        <%= pb.page_block_header(:title=>t(:label_chm_change_status_edit)) do %>
+          <td id="topButtonRow" class="pbButton">
             <div class="button"><%= link_submit t(:save)%></div>
             <div class="button"><%= link_back t(:cancel)%></div>
-        <% end %>
-        <div class="pbBody">
-          <%= error_for @change_status%>
-          <%= first_sub_page_block(t(:label_common_info)) do  %>
-            <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-              <tbody>
-                <tr>
-                  <td class="labelCol"><label for="code"><%=t(:code)%></label></td>
-                  <td class="dataCol"><%=@change_status.code%></td>
-                  <td class="labelCol empty">&nbsp;</td>
-                  <td class="dataCol empty">&nbsp;</td>
-                </tr>
-                <tr>
-                  <td class="labelCol"><label for="name"><%=t(:name)%></label></td>
-                  <td class="dataCol"><%=f.text_field :name, :required=>true ,:id=>"name"%></td>
-                  <td class="labelCol empty">&nbsp;</td>
-                  <td class="dataCol empty">&nbsp;</td>
-                </tr>
-                <tr>
-                  <td class="labelCol"><label for="display_sequence"><%=t(:display_sequence)%></label></td>
-                  <td class="dataCol"><%=f.text_field :display_sequence, :required=>true,:size=>5 %></td>
-                  <td class="labelCol empty">&nbsp;</td>
-                  <td class="dataCol empty">&nbsp;</td>
-                </tr>
-                <tr>
-                  <td class="labelCol"><label for="default_flag"><%=t(:default_flag)%></label></td>
-                  <td class="dataCol"><%=f.check_box :default_flag%></td>
-                  <td class="labelCol empty">&nbsp;</td>
-                  <td class="dataCol empty">&nbsp;</td>
-                </tr>
-                <tr>
-                  <td class="labelCol"><label for="description"><%=t(:description)%></label></td>
-                  <td class="dataCol" colspan="3" width="82%"><%=f.text_area :description, :cols=>60,:rows=>5,:id=>"description"%></td>
-                </tr>
+          </td>
+          <td class="pbHelp">
+          </td>
 
-              </tbody>
-            </table>
+        <% end %>
+       <%= pb.page_block_body do %>
+            <%= error_for @change_status%>
+            <%= sub_page_block("baseInfo") do |spb|%>
+                <%= spb.sub_page_block_header(:title=>t(:label_common_info),:first=>true)%>
+                <%= spb.sub_page_block_body do %>
+                    <table class="detailList" cellpadding="0" cellspacing="0" border="0">
+                      <tbody>
+                        <tr>
+                          <td class="labelCol"><label for="code"><%=t(:code)%></label></td>
+                          <td class="dataCol"><%=@change_status.code%></td>
+                          <td class="labelCol empty">&nbsp;</td>
+                          <td class="dataCol empty">&nbsp;</td>
+                        </tr>
+                        <tr>
+                          <td class="labelCol"><label for="name"><%=t(:name)%></label></td>
+                          <td class="dataCol"><%=f.text_field :name, :required=>true ,:id=>"name"%></td>
+                          <td class="labelCol empty">&nbsp;</td>
+                          <td class="dataCol empty">&nbsp;</td>
+                        </tr>
+                        <tr>
+                          <td class="labelCol"><label for="display_sequence"><%=t(:display_sequence)%></label></td>
+                          <td class="dataCol"><%=f.text_field :display_sequence, :required=>true,:size=>5 %></td>
+                          <td class="labelCol empty">&nbsp;</td>
+                          <td class="dataCol empty">&nbsp;</td>
+                        </tr>
+                        <tr>
+                          <td class="labelCol"><label for="default_flag"><%=t(:default_flag)%></label></td>
+                          <td class="dataCol"><%=f.check_box :default_flag%></td>
+                          <td class="labelCol empty">&nbsp;</td>
+                          <td class="dataCol empty">&nbsp;</td>
+                        </tr>
+                        <tr>
+                          <td class="labelCol"><label for="description"><%=t(:description)%></label></td>
+                          <td class="dataCol" colspan="3" width="82%"><%=f.text_area :description, :cols=>60,:rows=>5,:id=>"description"%></td>
+                        </tr>
+
+                      </tbody>
+                    </table>
+                <% end %>
           <% end %>
         </div>
-        <%= page_block_footer do %>
+        <%= pb.page_block_footer do %>
+          <td id="topButtonRow" class="pbButton">
             <div class="button"><%= link_submit t(:save)%></div>
             <div class="button"><%= link_back t(:cancel)%></div>
+          </td>
         <% end %>
+    <% end %>
     <% end %>
 <% end %>
