--- a/app/views/chm/change_urgencies/new.html.erb
+++ b/app/views/chm/change_urgencies/new.html.erb
@@ -1,2 +1,6 @@
-<%= common_title %>
-<%= render 'new_form'%>
+<%= page("newUrgency") do |p| %>
+    <%= p.page_header %>
+    <%= p.page_body do %>
+         <%= render 'new_form'%>
+    <% end %>
+<% end %>
