--- a/public/themes/default/stylesheets/public.ie6.css
+++ b/public/themes/default/stylesheets/public.ie6.css
@@ -90,3 +90,15 @@ body .detail-block.page-block .pbBody .pbSubheader{background-color:transparent;
 .display-N{display:none}
 .un-display-Y{display:none}
 .un-display-N{display:inline}
+
+.pbError, .editListError {
+    color:#CC0000;
+    font-weight:bold;
+    text-align:center;
+}
+
+.pbSucc{
+    color:#00ab21;
+    font-weight:bold;
+    text-align:center;
+}
