添加变更单回复页面

--- a/app/views/chm/change_requests/_show.html.erb
+++ b/app/views/chm/change_requests/_show.html.erb
@@ -65,3 +65,11 @@
         </table>
     <% end %>
 <% end %>
+
+<%= render "list_journals" %>
+
+
+<iframe name="hiddenFrame" style="display: none;"></iframe>
+<div id="journalForm">
+  <%= render "journal_form" %>
+</div>
