--- a/app/views/chm/change_requests/show.html.erb
+++ b/app/views/chm/change_requests/show.html.erb
@@ -1,1 +1,51 @@
+<style type="text/css">
+
+  div#histories{
+      background-color: #FFFFFF;
+      border-bottom: 0px;
+      border-left: 0px;
+      border-right: 0px;
+  }
+
+  div.reply div.replyHeader[submit_by="<%= @change_request.submitted_by%>"]{
+      /*提单人回复的*/
+      background-color: #ffebeb !important;
+  }
+
+  div.reply div.replyHeader{
+      background-color: #efefef;
+      padding: 3px 0 0 3px;
+      height: 28px;
+      -moz-border-radius: 0 4px 4px 0;
+      -webkit-border-top-right-radius: 4px;
+      -webkit-border-bottom-right-radius: 4px;
+      box-sizing: content-box;
+  }
+
+  div.reply div.replyHeader[submit_by="<%= Irm::Person.current.id%>"]{
+      /*自己回复的*/
+      background-color: #ddeef4 !important;
+  }
+
+
+  div.reply div.replyHeaderSection{
+    padding: 5px 5px 5px 0px;
+    min-height: 40px;
+  }
+  div.reply h3{
+      font-weight:bold;
+  }
+  div.reply .avatar{
+    background-color: white;
+    border: 1px solid #D0D0D0;
+    float: left;
+    line-height: 0;
+    margin-right: 0.7em;
+    padding: 2px;
+  }
+
+  div.reply .message{
+      margin-left: 46px;
+  }
+</style>
 <%= render :partial=>"show_tmp",:locals=>{:partial=>"show"}%>
